src/test/data/rosieannotator/highlight_for_multiple_violations.py
clas<error descr="critical_violation (Codiga)">s Per</error>son:
  de<warning descr="error_violation (Codiga)">f __i</warning>nit__(self, name):
    <weak_warning descr="warning_violation (Codiga)">self.</weak_warning>name = name
